Signed-off-by: bernie <bernie@hyx.com> 1.初始化原始界面
Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/decorator/footer.html
+++ b/src/main/webapp/WEB-INF/html/decorator/footer.html
@@ -1,4 +1,4 @@
 <footer id="footer">
-	<p>Copyright @ 2014 maizuo. All Rights Reserved</p>
-	<p>卖座网 版权所有</p>
+	<p>Copyright @ 2014 bernie. All Rights Reserved</p>
+	<p>bernie 版权所有</p>
 </footer>
