Signed-off-by: bernie <bernie@hyx.com> 背景轮播
Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -1,2 +1,17 @@
 <header>
+    header
 </header>
+<div class="bgPictureShow">
+    <ul>
+        <li class="hide"><img src="/App/image/global/indexbg/dr.jpg" /></li>
+        <li class="hide"><img src="/App/image/global/indexbg/bg1.jpg"/></li>
+        <li class="hide"><img src="/App/image/global/indexbg/aa.jpg"/></li>
+        <li class="hide show"><img src="/App/image/global/indexbg/coco.jpg"/></li>
+        <li class="hide"><img src="/App/image/global/indexbg/dd.jpg"/></li>
+        <li class="hide"><img src="/App/image/global/indexbg/sf.jpg"/></li>
+        <li class="hide"><img src="/App/image/global/indexbg/jugg.jpg"/></li>
+        <li class="hide"><img src="/App/image/global/indexbg/bg2.jpg"/></li>
+        <li class="hide"><img src="/App/image/global/indexbg/dr2.jpg"/></li>
+        <li class="hide"><img src="/App/image/global/indexbg/fur.jpg"/></li>
+    </ul>
+</div>
