--- a/src/main/webapp/WEB-INF/html/decorator/footer.html
+++ b/src/main/webapp/WEB-INF/html/decorator/footer.html
@@ -1,4 +1,6 @@
 <footer id="footer">
-	<p>Copyright @ 2014 bernie. All Rights Reserved</p>
-	<p>bernie 版权所有</p>
+	<div class="footerInfo">
+		时尚热线：0755-26656882      地址：深圳市南山区田厦国际营销中心B座1919（南山区委西侧，桃园站A出口）<br>
+		Copyright @ 2014 深圳市戴丝诺时尚文化有限公司. All Rights Reserved bernie 版权所有
+	</div>
 </footer>
