--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -1,53 +1,79 @@
-<header>
-    <div class="navigator">
-        <a href="/">
-            <div class="navig mainNav">戴丝诺3D雕发</div>
-        </a>
-        <a href="/">
-            <div class="navig homeNav">首页</div>
-        </a>
-        <a href="/">
-            <div class="navig diaofaNav">3D雕发</div>
-        </a>
-        <a href="/">
-            <div class="navig jishuNav">技术工艺</div>
-        </a>
-        <a href="/">
-            <div class="navig anliNav">案例欣赏</div>
-        </a>
-        <a href="/">
-            <div class="navig shishangNav">时尚资讯</div>
-        </a>
-        <a href="/">
-            <div class="navig dnsNav">走进戴丝诺</div>
-        </a>
-    </div>
-</header>
 <div class="bgPictureShow">
-    <ul class="picUl">
-        <li class="hide"><img src="/App/image/global/indexbg/bg3.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/bg1.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/aa.jpg"/></li>
-        <li class="hide show"><img src="/App/image/global/indexbg/coco.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/dk.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/jugg2.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/sl.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/bg2.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/th.jpg"/></li>
-        <li class="hide"><img src="/App/image/global/indexbg/water.jpg"/></li>
-    </ul>
-    <div class="imgPos">
-        <ul>
-            <li class="active" data-index="0">1</li>
-            <li class="" data-index="1">2</li>
-            <li class="" data-index="2">3</li>
-            <li class="" data-index="3">4</li>
-            <li class="" data-index="4">5</li>
-            <li class="" data-index="5">6</li>
-            <li class="" data-index="6">7</li>
-            <li class="" data-index="7">8</li>
-            <li class="" data-index="8">9</li>
-            <li class="" data-index="9">10</li>
-        </ul>
-    </div>
+	<ul class="picUl">
+		<li class="hide"><img src="/App/image/global/indexbg/bg3.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/bg1.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/aa.jpg"/></li>
+		<li class="hide show"><img src="/App/image/global/indexbg/coco.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/dk.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/jugg2.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/sl.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/bg2.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/th.jpg"/></li>
+		<li class="hide"><img src="/App/image/global/indexbg/water.jpg"/></li>
+	</ul>
 </div>
+<div class="imgPos">
+	<ul>
+		<li class="active" data-index="0">1</li>
+		<li class="" data-index="1">2</li>
+		<li class="" data-index="2">3</li>
+		<li class="" data-index="3">4</li>
+		<li class="" data-index="4">5</li>
+		<li class="" data-index="5">6</li>
+		<li class="" data-index="6">7</li>
+		<li class="" data-index="7">8</li>
+		<li class="" data-index="8">9</li>
+		<li class="" data-index="9">10</li>
+	</ul>
+</div>
+<header>
+	<div class="navbox">
+		<ul>
+			<li class="mainNav"><a href="" class="zhuye">戴丝诺3D雕发</a></li>
+			<li><a href="" class="shouye">首页</a></li>
+			<li>
+				<a href="" class="diaofa">3D雕发</a>
+				<div class="lit">
+					<a href="">3D雕发1</a>
+					<a href="">3D雕发2</a>
+					<a href="">3D雕发3</a>
+				</div>
+			</li>
+			<li>
+				<a href="" class="jishugongyi">技术工艺</a>
+				<div class="lit">
+					<a href="">3D雕发1</a>
+					<a href="">3D雕发2</a>
+					<a href="">3D雕发3</a>
+				</div>
+			</li>
+			<li><a href="" class="anlixinshang">案例欣赏</a></li>
+			<li><a href="" class="shishangzixun">时尚资讯</a></li>
+			<li><a href="" class="zoujindsn">走进戴丝诺</a></li>
+		</ul>
+		<!--<a href="/">-->
+		<!--<div class="navig mainNav">戴丝诺3D雕发</div>-->
+		<!--</a>-->
+		<!--<a href="/">-->
+		<!--<div class="navig homeNav">首页</div>-->
+		<!--</a>-->
+		<!--<a href="/">-->
+		<!--<div class="navig diaofaNav">3D雕发</div>-->
+		<!--<div class="lit">-->
+
+		<!--</div>-->
+		<!--</a>-->
+		<!--<a href="/">-->
+		<!--<div class="navig jishuNav">技术工艺</div>-->
+		<!--</a>-->
+		<!--<a href="/">-->
+		<!--<div class="navig anliNav">案例欣赏</div>-->
+		<!--</a>-->
+		<!--<a href="/">-->
+		<!--<div class="navig shishangNav">时尚资讯</div>-->
+		<!--</a>-->
+		<!--<a href="/">-->
+		<!--<div class="navig dnsNav">走进戴丝诺</div>-->
+		<!--</a>-->
+	</div>
+</header>
