Signed-off-by: bernie <bernie@hyx.com> update

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -34,17 +34,23 @@
 			<li>
 				<a href="" class="diaofa">3D雕发</a>
 				<div class="lit">
-					<a href="">3D雕发1</a>
-					<a href="">3D雕发2</a>
-					<a href="">3D雕发3</a>
+					<a href="" class="subnav">3D雕发1</a>
+					<a href="" class="subnav">3D雕发2</a>
+					<a href="" class="subnav">3D雕发3</a>
+				</div>
+				<div class="litMask">
+
 				</div>
 			</li>
 			<li>
 				<a href="" class="jishugongyi">技术工艺</a>
 				<div class="lit">
-					<a href="">3D雕发1</a>
-					<a href="">3D雕发2</a>
-					<a href="">3D雕发3</a>
+					<a href="" class="subnav">3D雕发1</a>
+					<a href="" class="subnav">3D雕发2</a>
+					<a href="" class="subnav">3D雕发3</a>
+				</div>
+				<div class="litMask">
+
 				</div>
 			</li>
 			<li><a href="" class="anlixinshang">案例欣赏</a></li>
