--- a/src/main/webapp/WEB-INF/html/decorator/main.html
+++ b/src/main/webapp/WEB-INF/html/decorator/main.html
@@ -19,6 +19,8 @@
 
 	<link rel="stylesheet" href="/App/assets/lib/bootstrap/css/bootstrap.css"/>
 	<link rel="stylesheet" href="/App/assets/lib/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" href="/App/css/global/external.css"/>
+
 	<sitemesh:write property='head'/>
 
 </head>
