Signed-off-by: bernie <bernie@hyx.com> update 124

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -28,58 +28,53 @@
 </div>
 <header>
 	<div class="navbox">
-		<ul>
-			<li class="mainNav"><a href="" class="zhuye">戴丝诺3D雕发</a></li>
-			<li><a href="" class="shouye">首页</a></li>
-			<li>
-				<a href="" class="diaofa">3D雕发</a>
-				<div class="lit">
-					<a href="" class="subnav">3D雕发1</a>
-					<a href="" class="subnav">3D雕发2</a>
-					<a href="" class="subnav">3D雕发3</a>
-				</div>
-				<div class="litMask">
+		<div class="headMain">
+			<div class="headLogo">戴丝诺3D雕发中心</div>
+			<div class="headTel">时尚热线：0755-<span style="font-size: 22px">2665 6882</span></div>
+			<div class="headRight">
+				<div class="leaveMsg">在线留言</div>
+				<div class="weixin">官方微信</div>
+				<div class="email">邮箱</div>
+			</div>
+		</div>
+		<div class="headNav">
+			<div class="headNavWrap">
+				<li><a href="" class="shouye">首页</a></li>
+				<li>
+					<a href="" class="diaofashishang">雕发时尚</a>
+					<div class="lit">
+						<a href="" class="subnav">3D雕发1</a>
+						<a href="" class="subnav">3D雕发2</a>
+						<a href="" class="subnav">3D雕发3</a>
+					</div>
+					<div class="litMask">
 
-				</div>
-			</li>
-			<li>
-				<a href="" class="jishugongyi">技术工艺</a>
-				<div class="lit">
-					<a href="" class="subnav">3D雕发1</a>
-					<a href="" class="subnav">3D雕发2</a>
-					<a href="" class="subnav">3D雕发3</a>
-				</div>
-				<div class="litMask">
+					</div>
+				</li>
+				<li>
+					<a href="" class="diaofazhishi">雕发知识</a>
+					<div class="lit">
+						<a href="" class="subnav">技术观瞻</a>
+						<a href="" class="subnav">定制流程</a>
+						<a href="" class="subnav">工艺鉴别</a>
+					</div>
+					<div class="litMask">
 
-				</div>
-			</li>
-			<li><a href="" class="anlixinshang">案例欣赏</a></li>
-			<li><a href="" class="shishangzixun">时尚资讯</a></li>
-			<li><a href="" class="zoujindsn">走进戴丝诺</a></li>
-		</ul>
-		<!--<a href="/">-->
-		<!--<div class="navig mainNav">戴丝诺3D雕发</div>-->
-		<!--</a>-->
-		<!--<a href="/">-->
-		<!--<div class="navig homeNav">首页</div>-->
-		<!--</a>-->
-		<!--<a href="/">-->
-		<!--<div class="navig diaofaNav">3D雕发</div>-->
-		<!--<div class="lit">-->
+					</div>
+				</li>
+				<li><a href="" class="diaofaanli">雕发案例</a></li>
+				<li><a href="" class="shipinxinshang">视频欣赏</a></li>
+				<li><a href="" class="zoujindsn">走进戴丝诺</a></li>
+			</div>
 
-		<!--</div>-->
-		<!--</a>-->
-		<!--<a href="/">-->
-		<!--<div class="navig jishuNav">技术工艺</div>-->
-		<!--</a>-->
-		<!--<a href="/">-->
-		<!--<div class="navig anliNav">案例欣赏</div>-->
-		<!--</a>-->
-		<!--<a href="/">-->
-		<!--<div class="navig shishangNav">时尚资讯</div>-->
-		<!--</a>-->
-		<!--<a href="/">-->
-		<!--<div class="navig dnsNav">走进戴丝诺</div>-->
-		<!--</a>-->
+
+		</div>
+		<div class="headSubDiv">
+			<div class="headSubDivWrap">
+				<div class="headSubMask"></div>
+				<div class="headSubContent">adasdasdadasdasdasdadasds</div>
+
+			</div>
+		</div>
 	</div>
 </header>
