Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -1,15 +1,15 @@
 <div class="bgPictureShow">
 	<ul class="picUl">
-		<li class="hide"><img src="/App/image/global/indexbg/bg3.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/bg1.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/aa.jpg"/></li>
-		<li class="hide show"><img src="/App/image/global/indexbg/coco.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/dk.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/jugg2.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/sl.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/bg2.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/th.jpg"/></li>
-		<li class="hide"><img src="/App/image/global/indexbg/water.jpg"/></li>
+		<li class="hide"><img src="../../App/image/global/indexbg/bg3.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/bg1.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/aa.jpg"/></li>
+		<li class="hide show"><img src="../..//App/image/global/indexbg/coco.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/dk.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/jugg2.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/sl.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/bg2.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/th.jpg"/></li>
+		<li class="hide"><img src="../..//App/image/global/indexbg/water.jpg"/></li>
 	</ul>
 </div>
 <div class="imgPos">
@@ -40,39 +40,84 @@
 		<div class="headNav">
 			<div class="headNavWrap">
 				<li><a href="" class="shouye">首页</a></li>
-				<li>
-					<a href="" class="diaofashishang">雕发时尚</a>
-					<div class="lit">
-						<a href="" class="subnav">3D雕发1</a>
-						<a href="" class="subnav">3D雕发2</a>
-						<a href="" class="subnav">3D雕发3</a>
-					</div>
-					<div class="litMask">
-
-					</div>
-				</li>
-				<li>
-					<a href="" class="diaofazhishi">雕发知识</a>
-					<div class="lit">
-						<a href="" class="subnav">技术观瞻</a>
-						<a href="" class="subnav">定制流程</a>
-						<a href="" class="subnav">工艺鉴别</a>
-					</div>
-					<div class="litMask">
-
-					</div>
-				</li>
+				<li><a href="" class="diaofashishang">雕发时尚</a>	</li>
+				<li><a href="" class="diaofazhishi">雕发知识</a>	</li>
 				<li><a href="" class="diaofaanli">雕发案例</a></li>
 				<li><a href="" class="shipinxinshang">视频欣赏</a></li>
 				<li><a href="" class="zoujindsn">走进戴丝诺</a></li>
 			</div>
-
-
 		</div>
-		<div class="headSubDiv">
+		<div class="headSubDiv subdiaofashishang">
 			<div class="headSubDivWrap">
 				<div class="headSubMask"></div>
-				<div class="headSubContent">adasdasdadasdasdasdadasds</div>
+				<div class="headSubContent">
+					<div class="headSubNav">
+						<li class="headSubNavTile"><a href="#">雕发时尚</a></li>
+						<li class="headSubNavTile"><a href="#">雕发时尚</a></li>
+						<li class="headSubNavTile"><a href="#">雕发时尚</a></li>
+					</div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="270px" height="130px"/></div>
+
+				</div>
+
+			</div>
+		</div>
+		<div class="headSubDiv subdiaofazhishi">
+			<div class="headSubDivWrap">
+				<div class="headSubMask"></div>
+				<div class="headSubContent">
+					<div class="headSubNav">
+						<li class="headSubNavTile"><a href="#">雕发案例</a></li>
+						<li class="headSubNavTile"><a href="#">雕发案例</a></li>
+						<li class="headSubNavTile"><a href="#">雕发案例</a></li>
+					</div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+
+				</div>
+
+			</div>
+		</div>
+		<div class="headSubDiv subdiaofaanli">
+			<div class="headSubDivWrap">
+				<div class="headSubMask"></div>
+				<div class="headSubContent">
+					<div class="headSubNav">
+						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="#">定制流程</a></li>
+						<li class="headSubNavTile"><a href="#">工艺鉴别</a></li>
+					</div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+
+				</div>
+
+			</div>
+		</div>
+		<div class="headSubDiv subshipinxinshang">
+			<div class="headSubDivWrap">
+				<div class="headSubMask"></div>
+				<div class="headSubContent">
+					<div class="headSubNav">
+						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
+					</div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+
+				</div>
+
+			</div>
+		</div>
+		<div class="headSubDiv subzoujindsn">
+			<div class="headSubDivWrap">
+				<div class="headSubMask"></div>
+				<div class="headSubContent">
+					<div class="headSubNav">
+						<li class="headSubNavTile"><a href="#">技术观瞻</a></li>
+						<li class="headSubNavTile"><a href="#">定制流程</a></li>
+						<li class="headSubNavTile"><a href="#">工艺鉴别</a></li>
+					</div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+				</div>
 
 			</div>
 		</div>
