--- a/src/main/webapp/WEB-INF/html/decorator/main.html
+++ b/src/main/webapp/WEB-INF/html/decorator/main.html
@@ -17,9 +17,9 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<link rel="stylesheet" href="/App/assets/lib/bootstrap/css/bootstrap.css"/>
-	<link rel="stylesheet" href="/App/assets/lib/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="/App/css/global/external.css"/>
+	<link rel="stylesheet" href="../../App/assets/lib/bootstrap/css/bootstrap.css"/>
+	<link rel="stylesheet" href="../../App/assets/lib/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" href="../../App/css/global/external.css"/>
 
 	<sitemesh:write property='head'/>
 
@@ -37,8 +37,8 @@
 	<div th:include="decorator/footer" th:remove="tag"></div>
 
 </div>
-<script src="/App/lib/basic.js?t=1410238259502"></script>
-<script src="/App/config.js">
+<script src="../../App/lib/basic.js?t=1410238259502"></script>
+<script src="../../App/config.js">
 	require([$('meta[name=view]').attr('content')]);
 </script>
 <script>
