首页交互和内容添加
Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -36,15 +36,20 @@
 				<div class="weixin">官方微信</div>
 				<div class="email">邮箱</div>
 			</div>
+			<div class="headRightHide">
+				<!--<div class="leaveMsg">在线留言</div>-->
+				<div class="weixinHide"><img src="../../App/image/global/logo/logo.png" alt="" width="150px" height="150px"/></div>
+				<div class="emailHide">594171643@qq.com</div>
+			</div>
 		</div>
 		<div class="headNav">
 			<div class="headNavWrap">
-				<li><a href="" class="shouye">首页</a></li>
-				<li><a href="" class="diaofashishang">雕发时尚</a>	</li>
-				<li><a href="" class="diaofazhishi">雕发知识</a>	</li>
-				<li><a href="" class="diaofaanli">雕发案例</a></li>
-				<li><a href="" class="shipinxinshang">视频欣赏</a></li>
-				<li><a href="" class="zoujindsn">走进戴丝诺</a></li>
+				<li><a href="/index" class="shouye">首页</a></li>
+				<li><a href="/diaofashishang" class="diaofashishang">雕发时尚</a>	</li>
+				<li><a href="/diaofazhishi" class="diaofazhishi">雕发知识</a>	</li>
+				<li><a href="/diaofaanli" class="diaofaanli">雕发案例</a></li>
+				<li><a href="/shipinxinshang" class="shipinxinshang">视频欣赏</a></li>
+				<li><a href="zoujindsn" class="zoujindsn">走进戴丝诺</a></li>
 			</div>
 		</div>
 		<div class="headSubDiv subdiaofashishang">
@@ -52,9 +57,9 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="#">雕发时尚</a></li>
-						<li class="headSubNavTile"><a href="#">雕发时尚</a></li>
-						<li class="headSubNavTile"><a href="#">雕发时尚</a></li>
+						<li class="headSubNavTile"><a href="/diaofashishang#!1">雕发时尚</a></li>
+						<li class="headSubNavTile"><a href="/diaofashishang#!2">雕发时尚</a></li>
+						<li class="headSubNavTile"><a href="/diaofashishang#!3">雕发时尚</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="270px" height="130px"/></div>
 
@@ -67,9 +72,9 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="#">雕发案例</a></li>
-						<li class="headSubNavTile"><a href="#">雕发案例</a></li>
-						<li class="headSubNavTile"><a href="#">雕发案例</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!1">雕发案例</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!2">雕发案例</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!3">雕发案例</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
 
@@ -82,9 +87,9 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
-						<li class="headSubNavTile"><a href="#">定制流程</a></li>
-						<li class="headSubNavTile"><a href="#">工艺鉴别</a></li>
+						<li class="headSubNavTile"><a href="/diaofaanli#!1">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="/diaofaanli#!2">定制流程</a></li>
+						<li class="headSubNavTile"><a href="/diaofaanli#!3">工艺鉴别</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
 
@@ -97,9 +102,9 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
-						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
-						<li class="headSubNavTile"><a href="#">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="/shipinxinshang#!1">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="/shipinxinshang#!2">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="/shipinxinshang#!3">视频欣赏</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
 
@@ -112,9 +117,9 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="#">技术观瞻</a></li>
-						<li class="headSubNavTile"><a href="#">定制流程</a></li>
-						<li class="headSubNavTile"><a href="#">工艺鉴别</a></li>
+						<li class="headSubNavTile"><a href="/zoujindsn#!1">技术观瞻</a></li>
+						<li class="headSubNavTile"><a href="/zoujindsn#!1">定制流程</a></li>
+						<li class="headSubNavTile"><a href="/zoujindsn#!1">工艺鉴别</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
 				</div>
