--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -1,31 +1,31 @@
-<div class="bgPictureShow">
-	<ul class="picUl">
-		<li class="hide"><img src="../../App/image/global/indexbg/bg3.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/bg1.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/aa.jpg"/></li>
-		<li class="hide show"><img src="../..//App/image/global/indexbg/coco.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/dk.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/jugg2.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/sl.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/bg2.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/th.jpg"/></li>
-		<li class="hide"><img src="../..//App/image/global/indexbg/water.jpg"/></li>
-	</ul>
-</div>
-<div class="imgPos">
-	<ul>
-		<li class="active" data-index="0">1</li>
-		<li class="" data-index="1">2</li>
-		<li class="" data-index="2">3</li>
-		<li class="" data-index="3">4</li>
-		<li class="" data-index="4">5</li>
-		<li class="" data-index="5">6</li>
-		<li class="" data-index="6">7</li>
-		<li class="" data-index="7">8</li>
-		<li class="" data-index="8">9</li>
-		<li class="" data-index="9">10</li>
-	</ul>
-</div>
+<!--<div class="bgPictureShow">-->
+	<!--<ul class="picUl">-->
+		<!--<li class="hide"><img src="../../App/image/global/indexbg/bg3.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/bg1.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/aa.jpg"/></li>-->
+		<!--<li class="hide show"><img src="../..//App/image/global/indexbg/coco.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/dk.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/jugg2.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/sl.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/bg2.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/th.jpg"/></li>-->
+		<!--<li class="hide"><img src="../..//App/image/global/indexbg/water.jpg"/></li>-->
+	<!--</ul>-->
+<!--</div>-->
+<!--<div class="imgPos">-->
+	<!--<ul>-->
+		<!--<li class="active" data-index="0">1</li>-->
+		<!--<li class="" data-index="1">2</li>-->
+		<!--<li class="" data-index="2">3</li>-->
+		<!--<li class="" data-index="3">4</li>-->
+		<!--<li class="" data-index="4">5</li>-->
+		<!--<li class="" data-index="5">6</li>-->
+		<!--<li class="" data-index="6">7</li>-->
+		<!--<li class="" data-index="7">8</li>-->
+		<!--<li class="" data-index="8">9</li>-->
+		<!--<li class="" data-index="9">10</li>-->
+	<!--</ul>-->
+<!--</div>-->
 <header>
 	<div class="navbox">
 		<div class="headMain">
