--- a/src/main/webapp/WEB-INF/html/decorator/main.html
+++ b/src/main/webapp/WEB-INF/html/decorator/main.html
@@ -37,13 +37,31 @@
 	<div th:include="decorator/footer" th:remove="tag"></div>
 
 </div>
-<script src="../../App/lib/basic.js?t=1410238259502"></script>
+<script src="/App/lib/basic.js?t=1418730670605"></script>
 <script src="../../App/config.js">
 	require([$('meta[name=view]').attr('content')]);
 </script>
 <script>
     require([$('meta[name=defaultview]').attr('content')]);
 </script>
+<script type="text/javascript">
+//	$(document).ready(function() {
+//		KindEditor.ready(function(K) {
+//			window.editor = K.create('#editor_id');
+//		});
 
+////		$('#summernote').summernote({
+////			height: 300,
+////			codemirror: {
+////				mode: 'text/html',
+////				htmlMode: true,
+////				lineNumbers: true,
+////				theme: 'monokai'
+////			}
+////		});
+//		console.info($('#summernote'));
+//	});
+
+</script>
 </body>
 </html>
