--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -1,40 +1,13 @@
-<!--<div class="bgPictureShow">-->
-	<!--<ul class="picUl">-->
-		<!--<li class="hide"><img src="../../App/image/global/indexbg/bg3.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/bg1.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/aa.jpg"/></li>-->
-		<!--<li class="hide show"><img src="../..//App/image/global/indexbg/coco.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/dk.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/jugg2.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/sl.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/bg2.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/th.jpg"/></li>-->
-		<!--<li class="hide"><img src="../..//App/image/global/indexbg/water.jpg"/></li>-->
-	<!--</ul>-->
-<!--</div>-->
-<!--<div class="imgPos">-->
-	<!--<ul>-->
-		<!--<li class="active" data-index="0">1</li>-->
-		<!--<li class="" data-index="1">2</li>-->
-		<!--<li class="" data-index="2">3</li>-->
-		<!--<li class="" data-index="3">4</li>-->
-		<!--<li class="" data-index="4">5</li>-->
-		<!--<li class="" data-index="5">6</li>-->
-		<!--<li class="" data-index="6">7</li>-->
-		<!--<li class="" data-index="7">8</li>-->
-		<!--<li class="" data-index="8">9</li>-->
-		<!--<li class="" data-index="9">10</li>-->
-	<!--</ul>-->
-<!--</div>-->
 <header>
 	<div class="navbox">
 		<div class="headMain">
-			<div class="headLogo">戴丝诺3D雕发中心</div>
-			<div class="headTel">时尚热线：0755-<span style="font-size: 22px">2665 6882</span></div>
+			<!--<div class="headLogo">戴丝诺3D雕发中心</div>-->
+			<img src="/App/image/global/logo/LOGO.jpg" alt="" width="100%"/>
+			<!--<div class="headTel">时尚热线：0755-<span style="font-size: 22px">2665 6882</span></div>-->
 			<div class="headRight">
-				<div class="leaveMsg">在线留言</div>
-				<div class="weixin">官方微信</div>
-				<div class="email">邮箱</div>
+				<div class="leaveMsg"></div>
+				<div class="weixin"></div>
+				<div class="email"></div>
 			</div>
 			<div class="headRightHide">
 				<!--<div class="leaveMsg">在线留言</div>-->
@@ -46,10 +19,10 @@
 			<div class="headNavWrap">
 				<li><a href="/index" class="shouye">首页</a></li>
 				<li><a href="/diaofashishang" class="diaofashishang">雕发时尚</a>	</li>
-				<li><a href="/diaofazhishi" class="diaofazhishi">雕发知识</a>	</li>
-				<li><a href="/diaofaanli" class="diaofaanli">雕发案例</a></li>
-				<li><a href="/shipinxinshang" class="shipinxinshang">视频欣赏</a></li>
-				<li><a href="zoujindsn" class="zoujindsn">走进戴丝诺</a></li>
+				<li><a href="/diaofazhishi" class="diaofazhishi">雕发学堂</a>	</li>
+				<li><a href="/diaofaanli" class="diaofaanli">雕发鉴赏</a></li>
+				<li><a href="/shipinxinshang" class="shipinxinshang">雕发资讯</a></li>
+				<li><a href="zoujindsn" class="zoujindsn">品牌故事</a></li>
 			</div>
 		</div>
 		<div class="headSubDiv subdiaofashishang">
@@ -61,7 +34,7 @@
 						<li class="headSubNavTile"><a href="/diaofashishang#!2">雕发时尚</a></li>
 						<li class="headSubNavTile"><a href="/diaofashishang#!3">雕发时尚</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="270px" height="130px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 
 				</div>
 
@@ -76,7 +49,7 @@
 						<li class="headSubNavTile"><a href="/diaofazhishi#!2">雕发案例</a></li>
 						<li class="headSubNavTile"><a href="/diaofazhishi#!3">雕发案例</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 
 				</div>
 
@@ -91,7 +64,7 @@
 						<li class="headSubNavTile"><a href="/diaofaanli#!2">定制流程</a></li>
 						<li class="headSubNavTile"><a href="/diaofaanli#!3">工艺鉴别</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 
 				</div>
 
@@ -106,7 +79,7 @@
 						<li class="headSubNavTile"><a href="/shipinxinshang#!2">视频欣赏</a></li>
 						<li class="headSubNavTile"><a href="/shipinxinshang#!3">视频欣赏</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 
 				</div>
 
@@ -121,9 +94,8 @@
 						<li class="headSubNavTile"><a href="/zoujindsn#!1">定制流程</a></li>
 						<li class="headSubNavTile"><a href="/zoujindsn#!1">工艺鉴别</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/logo.png" alt="" width="300px" height="200px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
-
 			</div>
 		</div>
 	</div>
