--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -20,8 +20,8 @@
 				<li><a href="/index" class="shouye">首页</a></li>
 				<li><a href="/diaofashishang" class="diaofashishang">雕发时尚</a>	</li>
 				<li><a href="/diaofazhishi" class="diaofazhishi">雕发学堂</a>	</li>
-				<li><a href="/diaofaanli" class="diaofaanli">雕发鉴赏</a></li>
-				<li><a href="/shipinxinshang" class="shipinxinshang">雕发资讯</a></li>
+				<li><a href="/diaofajianshang" class="diaofajianshang">雕发鉴赏</a></li>
+				<li><a href="/diaofazixun" class="diaofazixun">雕发资讯</a></li>
 				<li><a href="zoujindsn" class="zoujindsn">品牌故事</a></li>
 			</div>
 		</div>
@@ -30,14 +30,11 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofashishang#!1">雕发时尚</a></li>
-						<li class="headSubNavTile"><a href="/diaofashishang#!2">雕发时尚</a></li>
-						<li class="headSubNavTile"><a href="/diaofashishang#!3">雕发时尚</a></li>
+						<li class="headSubNavTile"><a href="/diaofashishang#!1">雕发风潮</a></li>
+						<li class="headSubNavTile"><a href="/diaofashishang#!2">时尚前沿</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
-
 				</div>
-
 			</div>
 		</div>
 		<div class="headSubDiv subdiaofazhishi">
@@ -45,39 +42,35 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofazhishi#!1">雕发案例</a></li>
-						<li class="headSubNavTile"><a href="/diaofazhishi#!2">雕发案例</a></li>
-						<li class="headSubNavTile"><a href="/diaofazhishi#!3">雕发案例</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!1">技术观瞻</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!2">定制流程</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!3">工艺鉴别</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
-
 				</div>
-
 			</div>
 		</div>
-		<div class="headSubDiv subdiaofaanli">
+		<div class="headSubDiv subdiaofajianshang">
 			<div class="headSubDivWrap">
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofaanli#!1">视频欣赏</a></li>
-						<li class="headSubNavTile"><a href="/diaofaanli#!2">定制流程</a></li>
-						<li class="headSubNavTile"><a href="/diaofaanli#!3">工艺鉴别</a></li>
+						<li class="headSubNavTile"><a href="/diaofajianshang#!1">增补雕发</a></li>
+						<li class="headSubNavTile"><a href="/diaofajianshang#!2">时尚雕发</a></li>
+						<li class="headSubNavTile"><a href="/diaofajianshang#!3">佩戴演示</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
-
 				</div>
-
 			</div>
 		</div>
-		<div class="headSubDiv subshipinxinshang">
+		<div class="headSubDiv subdiaofazixun">
 			<div class="headSubDivWrap">
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/shipinxinshang#!1">视频欣赏</a></li>
-						<li class="headSubNavTile"><a href="/shipinxinshang#!2">视频欣赏</a></li>
-						<li class="headSubNavTile"><a href="/shipinxinshang#!3">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="/diaofazixun#!1">新闻动态</a></li>
+						<li class="headSubNavTile"><a href="/diaofazixun#!2">产品咨询</a></li>
+						<li class="headSubNavTile"><a href="/diaofazixun#!3">视频欣赏</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 
@@ -90,9 +83,10 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/zoujindsn#!1">技术观瞻</a></li>
-						<li class="headSubNavTile"><a href="/zoujindsn#!1">定制流程</a></li>
-						<li class="headSubNavTile"><a href="/zoujindsn#!1">工艺鉴别</a></li>
+						<li class="headSubNavTile"><a href="/zoujindsn#!pinpaijianjie">品牌简介</a></li>
+						<li class="headSubNavTile"><a href="/zoujindsn#!pinpaiyingpian">品牌影片</a></li>
+						<li class="headSubNavTile"><a href="/zoujindsn#!jiamenghezuo">加盟合作</a></li>
+						<li class="headSubNavTile"><a href="/zoujindsn#!lianxiwomen">联系我们</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
