--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -11,7 +11,7 @@
 			</div>
 			<div class="headRightHide">
 				<!--<div class="leaveMsg">在线留言</div>-->
-				<div class="weixinHide"><img src="../../App/image/global/logo/logo.png" alt="" width="150px" height="150px"/></div>
+				<div class="weixinHide"><img src="../../App/image/global/logo/erweicode.png" alt="" width="150px" height="150px"/></div>
 				<div class="emailHide">594171643@qq.com</div>
 			</div>
 		</div>
@@ -30,8 +30,8 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofashishang#!1">雕发风潮</a></li>
-						<li class="headSubNavTile"><a href="/diaofashishang#!2">时尚前沿</a></li>
+						<li class="headSubNavTile"><a href="/diaofashishang#!diaofafengchao">雕发风潮</a></li>
+						<li class="headSubNavTile"><a href="/diaofashishang#!shishangqianyan">时尚前沿</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
@@ -42,9 +42,9 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofazhishi#!1">技术观瞻</a></li>
-						<li class="headSubNavTile"><a href="/diaofazhishi#!2">定制流程</a></li>
-						<li class="headSubNavTile"><a href="/diaofazhishi#!3">工艺鉴别</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!jishuguanzhan">技术观瞻</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!dingzhiliucheng">定制流程</a></li>
+						<li class="headSubNavTile"><a href="/diaofazhishi#!gongyijianbie">工艺鉴别</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
@@ -55,9 +55,9 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofajianshang#!1">增补雕发</a></li>
-						<li class="headSubNavTile"><a href="/diaofajianshang#!2">时尚雕发</a></li>
-						<li class="headSubNavTile"><a href="/diaofajianshang#!3">佩戴演示</a></li>
+						<li class="headSubNavTile"><a href="/diaofajianshang#!zengbudiaofa">增补雕发</a></li>
+						<li class="headSubNavTile"><a href="/diaofajianshang#!shishangdiaofa">时尚雕发</a></li>
+						<li class="headSubNavTile"><a href="/diaofajianshang#!peidaiyanshi">佩戴演示</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
@@ -68,9 +68,8 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofazixun#!1">新闻动态</a></li>
-						<li class="headSubNavTile"><a href="/diaofazixun#!2">产品咨询</a></li>
-						<li class="headSubNavTile"><a href="/diaofazixun#!3">视频欣赏</a></li>
+						<li class="headSubNavTile"><a href="/diaofazixun#!xinwendongtai">新闻动态</a></li>
+						<li class="headSubNavTile"><a href="/diaofazixun#!chanpinzixun">产品资讯</a></li>
 					</div>
 					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
 
