--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -2,10 +2,10 @@
 	<div class="navbox">
 		<div class="headMain">
 			<!--<div class="headLogo">戴丝诺3D雕发中心</div>-->
-			<img src="/App/image/global/logo/LOGO.jpg" alt="" width="100%"/>
+			<img src="/App/image/global/logo/LOGO.png" alt="" width="100%"/>
 			<!--<div class="headTel">时尚热线：0755-<span style="font-size: 22px">2665 6882</span></div>-->
 			<div class="headRight">
-				<div class="leaveMsg"></div>
+				<a href="/contactus"><div class="leaveMsg"></div></a>
 				<div class="weixin"></div>
 				<div class="email"></div>
 			</div>
