Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -22,7 +22,7 @@
 				<li><a href="/diaofazhishi" class="diaofazhishi">雕发学堂</a>	</li>
 				<li><a href="/diaofajianshang" class="diaofajianshang">雕发鉴赏</a></li>
 				<li><a href="/diaofazixun" class="diaofazixun">雕发资讯</a></li>
-				<li><a href="zoujindsn" class="zoujindsn">品牌故事</a></li>
+				<li><a href="zoujindsn" class="zoujindsn">品牌加盟</a></li>
 			</div>
 		</div>
 		<div class="headSubDiv subdiaofashishang">
@@ -33,7 +33,7 @@
 						<li class="headSubNavTile"><a href="/diaofashishang#!diaofafengchao">雕发风潮</a></li>
 						<li class="headSubNavTile"><a href="/diaofashishang#!shishangqianyan">时尚前沿</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/diaofashishangpeitu.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
 			</div>
 		</div>
@@ -42,11 +42,12 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofazhishi#!jishuguanzhan">技术观瞻</a></li>
+                        <li class="headSubNavTile"><a href="/diaofazhishi#!peixunzhongxin">培训中心</a></li>
+                        <li class="headSubNavTile"><a href="/diaofazhishi#!jishuguanzhan">技术观瞻</a></li>
 						<li class="headSubNavTile"><a href="/diaofazhishi#!dingzhiliucheng">定制流程</a></li>
 						<li class="headSubNavTile"><a href="/diaofazhishi#!gongyijianbie">工艺鉴别</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/diaofaxuetangpeitu.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
 			</div>
 		</div>
@@ -55,11 +56,12 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/diaofajianshang#!zengbudiaofa">增补雕发</a></li>
+                        <li class="headSubNavTile"><a href="/diaofajianshang#!zhubozaoxing">主播造型</a></li>
+                        <li class="headSubNavTile"><a href="/diaofajianshang#!zengbudiaofa">增补雕发</a></li>
 						<li class="headSubNavTile"><a href="/diaofajianshang#!shishangdiaofa">时尚雕发</a></li>
 						<li class="headSubNavTile"><a href="/diaofajianshang#!peidaiyanshi">佩戴演示</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/diaofajianshangpeitu.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
 			</div>
 		</div>
@@ -71,7 +73,7 @@
 						<li class="headSubNavTile"><a href="/diaofazixun#!xinwendongtai">新闻动态</a></li>
 						<li class="headSubNavTile"><a href="/diaofazixun#!chanpinzixun">产品资讯</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/diaofazixunpeitu.jpg" alt="" width="270px" height="130px"/></div>
 
 				</div>
 
@@ -82,12 +84,12 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-						<li class="headSubNavTile"><a href="/zoujindsn#!pinpaijianjie">品牌简介</a></li>
+                        <li class="headSubNavTile"><a href="/zoujindsn#!jiamenghezuo">加盟合作</a></li>
+                        <li class="headSubNavTile"><a href="/zoujindsn#!pinpaijianjie">品牌简介</a></li>
 						<li class="headSubNavTile"><a href="/zoujindsn#!pinpaiyingpian">品牌影片</a></li>
-						<li class="headSubNavTile"><a href="/zoujindsn#!jiamenghezuo">加盟合作</a></li>
 						<li class="headSubNavTile"><a href="/zoujindsn#!lianxiwomen">联系我们</a></li>
 					</div>
-					<div class="headSubImg"><img src="../../App/image/global/logo/innerp.jpg" alt="" width="270px" height="130px"/></div>
+					<div class="headSubImg"><img src="../../App/image/global/logo/pinpaigushipeitu.jpg" alt="" width="270px" height="130px"/></div>
 				</div>
 			</div>
 		</div>
