Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -12,7 +12,7 @@
 			<div class="headRightHide">
 				<!--<div class="leaveMsg">在线留言</div>-->
 				<div class="weixinHide"><img class="weixinimg" src="../../App/image/global/logo/erweicode.png" alt="" width="150px" height="150px"/></div>
-				<div class="emailHide">594171643@qq.com</div>
+				<div class="emailHide"><img class="emailimg" src="../../App/image/global/logo/email.png"    height="42px"/></div>
 			</div>
 		</div>
 		<div class="headNav">
