xxxSigned-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/decorator/header2.html
+++ b/src/main/webapp/WEB-INF/html/decorator/header2.html
@@ -42,7 +42,6 @@
 				<div class="headSubMask"></div>
 				<div class="headSubContent">
 					<div class="headSubNav">
-                        <li class="headSubNavTile"><a href="/diaofazhishi#!peixunzhongxin">培训中心</a></li>
                         <li class="headSubNavTile"><a href="/diaofazhishi#!jishuguanzhan">技术观瞻</a></li>
 						<li class="headSubNavTile"><a href="/diaofazhishi#!dingzhiliucheng">定制流程</a></li>
 						<li class="headSubNavTile"><a href="/diaofazhishi#!gongyijianbie">工艺鉴别</a></li>
@@ -86,6 +85,7 @@
 					<div class="headSubNav">
                         <li class="headSubNavTile"><a href="/zoujindsn#!jiamenghezuo">加盟合作</a></li>
                         <li class="headSubNavTile"><a href="/zoujindsn#!pinpaijianjie">品牌简介</a></li>
+                        <li class="headSubNavTile"><a href="/zoujindsn#!peixunzhongxin">培训中心</a></li>
 						<li class="headSubNavTile"><a href="/zoujindsn#!pinpaiyingpian">品牌影片</a></li>
 						<li class="headSubNavTile"><a href="/zoujindsn#!lianxiwomen">联系我们</a></li>
 					</div>
